# dj-blogpost

./: .gitignore  Dockerfile  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
myproject/: settings.py  urls.py  views.py
posts/: forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_banner.py  0003_alter_post_banner.py  0003_post_author.py
posts/templates/posts/: create_post.html  post_page.html  posts_list.html
static/css/: styles.css
templates/: about.html  base_layout.html  home.html  layout.html
users/: models.py  views.py
users/templates/users/: login.html  register.html
