[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Ahmed El-Kilani <ahmedelkilani01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
pillow = "^10.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
djlint = "^1.35.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
